--- a/src/scss/media.scss
+++ b/src/scss/media.scss
@@ -14,6 +14,9 @@
     
 }
 @media (max-width:992px ){
+    ul li ul {
+        display: none;
+    }
     .header #navigation {
         position: fixed;
         z-index: 2;
@@ -128,7 +131,7 @@
         font-family: "Open Sans", sans-serif;
         font-weight: 600;
         font-size: 14px;
-        line-height: 46px;
+        line-height: 39px;
         color: #ffffff;
         text-decoration: none;
         margin-left: 0px;
@@ -204,14 +207,22 @@
         height: 208px;
     }
     .grid-item__tittle {
-        position: absolute;
-        left: 6px;
-        top: 22%;
-        font-size: 18px;
-        color: rgb(255, 255, 255);
-        z-index: 1;
-        opacity: 1;
-    }
+    position: absolute;
+    left: -20px;
+    top: 7%;
+    font-size: 18px;
+    color: rgb(255, 255, 255);
+    z-index: 1;
+    opacity: 1;
+}
+.grid-item__img {
+    width: 130%;
+    height: 100%;
+    -o-object-fit: cover;
+    object-fit: cover;
+    -webkit-transition: all 0.4s ease;
+    transition: all 0.4s ease;
+}
     .grid-item__inner:before {
         content: "";
         position: absolute;
