--- a/projectContacts/src/scss/header.scss
+++ b/projectContacts/src/scss/header.scss
@@ -10,12 +10,13 @@
     z-index: 2;
     
 }
+
 .header {
     background: url('../../../src/img/bgMainDark.jpg');
-    
+   
     &_dark{
         
-        padding-bottom: 10px;
+        padding-bottom: 170px;
         
     }
     #navigation{
@@ -107,7 +108,12 @@
         align-items: center;  
         text-transform: uppercase;
         
-        
+        & .burger{
+            display: none;
+            position: absolute;
+            right: 25px;
+            top: 10px;
+        }
         &__img{
             position: absolute;
             height: 100px;
@@ -136,6 +142,7 @@
             font-family: "Open Sans",sans-serif;
             flex-wrap: wrap;
             padding-top: 20px;
+            transition: all .4s ease;
             &-item {
                 font-family: "Open Sans",sans-serif;
                 font-weight: 500;
