--- a/projectContacts/src/scss/media.scss
+++ b/projectContacts/src/scss/media.scss
@@ -1,3 +1,379 @@
+@media (max-width: 992px){
+    ul li ul {
+        display: none;
+    }
+    #down{
+        display: none;
+    }
+    .header #navigation {
+        position: fixed;
+        z-index: 2;
+        width: 500px;
+    }
+    .home {
+        padding: 20px;
+    }
+    .header{
+       & .burger{
+            display: block;
+            width: 50px;
+            height: 50px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            right: -354px;
+            &_active{
+                & .burger__line{
+                    background: none;
+                    &::before{
+                        transform: rotate(45deg);
+                        top: 0;
+                    }
+                    &::after{
+                        transform: rotate(-45deg);
+                        bottom: 0;
+                    }
+                }
+            }
+            &__line{
+                background: #fbfbfb;
+                width: 100%;
+                height: 2px;
+                position: relative;
+                &::before{
+                    content: '';
+                    position: absolute;
+                    left: 0;
+                    width: 100%;
+                    height: 100%;
+                    background: #fbfbfb;
+                    top: -12px;
+                    transition: all .4s ease;
+                }
+                &::after{
+                    content: '';
+                    position: absolute;
+                    left: 0;
+                    width: 100%;
+                    height: 100%;
+                    background: #fbfbfb;
+                    bottom: -12px;
+                    transition: all .4s ease;
+                }
+            }
+        }
+    }
+    .cont {
+        height: 67px;
+        width: 1220px;
+        
+    }
+    .container, .container-sm {
+        max-width: 883px;
+    }
+    .back-to-top {
+        position: fixed;
+        right: 10px;
+        bottom: 243px;
+        width: 50px;
+        height: 50px;
+        background-color: transparent;
+        border-radius: 50%;
+        background-color: rgb(36 80 103 / 72%);
+        display: none;
+    }
+    .advantage__icons_item__text {
+        font-weight: 600;
+        color: #fff;
+        font-size: 12px;
+        margin-top: 15px;
+        position: absolute;
+        width: 185px;
+        left: -52px;
+    }
+    .header_dark {
+        padding-bottom: 22px;
+    }
+    .header-nav{
+       
+       &_active{
+        position: relative;
+        
+        & .header-nav__menu{
+            display: block;
+    position: absolute;
+    display: flex;
+    flex-direction: column;
+    width: 317px;
+    height: 552px;
+    top: 0px;
+    right: -378px;
+    background: #962715;
+    -webkit-transition: all 0.4s ease;
+    transition: all 0.4s ease;
+    
+        }
+       }
+       &__menu{
+        display: none;
+       }
+    }
+    .header-nav_active .header-nav__menu {
+        display: block;
+        position: absolute;
+        display: -webkit-box;
+        display: -ms-flexbox;
+        display: flex;
+        -webkit-box-orient: vertical;
+        -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+        flex-direction: column;
+        width: 317px;
+        height: 661px;
+        top: 0px;
+        right: -378px;
+        background: #962715;
+        -webkit-transition: all 0.4s ease;
+        transition: all 0.4s ease;
+    }
+    .header-nav__menu-item {
+        font-family: "Open Sans", sans-serif;
+        font-weight: 600;
+        font-size: 14px;
+        line-height: 39px;
+        color: #ffffff;
+        text-decoration: none;
+        margin-left: 0px;
+    }
+    .header__contacts {
+       display: none;
+       
+    }
+    .header__contacts2 {
+        display: block;
+        hr {
+            margin: 14px;
+        }
+     }
+     
+     hr {
+        margin: 35px;
+    }
+    .header__contacts_active{
+        display: block;
+    }
+    .header-nav__img {
+        position: absolute;
+        height: 64px;
+        top: 0px;
+        left: 3px;
+    }
+    .header__info-title {
+        color: #FFF;
+        font-family: "Roboto Condensed", Sans-serif;
+        font-size: 40px;
+        font-weight: 600;
+        padding-bottom: 0px;
+        padding-top: 1px;
+    }
+    .header__info-subtitle {
+        color: #BFBFBF;
+        font-family: "Roboto Condensed", Sans-serif;
+        font-size: 20px;
+        font-weight: 600;
+        line-height: 1em;
+        margin-bottom: 15px;
+    }
+    .header__info-btn {
+        margin-top: 20px;
+        background-color: #962715;
+        width: 312px;
+        height: 53px;
+        display: block;
+        font-family: Roboto, Sans-serif;
+        font-size: 20px;
+        font-weight: 600;
+        line-height: .75em;
+        border-radius: 10px 10px 10px 10px;
+        text-decoration: none;
+        color: white;
+        padding: 19px;
+        text-align: center;
+        margin: 0 auto;
+        -webkit-transition: all 0.5s ease;
+        transition: all 0.5s ease;
+    }
+    .home__text {
+        text-align: center;
+        color: #1E1E20;
+        font-size: 27px;
+        font-weight: 600;
+        line-height: .75em;
+        padding-bottom: 2px;
+        padding-top: 2px;
+    }
+    .grid-item {
+        margin: 6px 0;
+        padding: 0 6px;
+        width: 50%;
+        height: 208px;
+    }
+    .grid-item__tittle {
+        position: absolute;
+        left: 6px;
+        top: 22%;
+        font-size: 18px;
+        color: rgb(255, 255, 255);
+        z-index: 1;
+        opacity: 1;
+    }
+    .grid-item__inner:before {
+        content: "";
+        position: absolute;
+        left: 0;
+        top: 0;
+        width: 100%;
+        height: 100%;
+        background: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0)), to(rgba(36, 79, 103, 0.5)));
+        background: linear-gradient(to bottom, rgb(0 0 0 / 53%), rgb(35 93 126 / 59%));
+        z-index: 1;
+        -webkit-transition: all 0.4s ease;
+        transition: all 0.4s ease;
+        opacity: 1;
+    }
+    .advantage__title {
+        text-align: center;
+        color: #1e1c1c;
+        font-size: 27px;
+        font-weight: 600;
+        line-height: 0.75em;
+        padding-bottom: 10px;
+        padding-top: 10px;
+    }
+    .advantage__icons_item {
+        padding-top: 8px;
+        padding-bottom: 63px;
+        border: 3px solid rgb(42 41 41);
+        width: 86px;
+        height: 50px;
+        border-radius: 50%;
+        color: #191717;
+        font-size: 47px;
+        text-align: center;
+        position: relative;
+    }
+    .advantage__icons {
+        display: -webkit-box;
+        display: -ms-flexbox;
+        display: flex;
+        -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+        justify-content: space-evenly;
+    }
+    .advantage__icons_item1 {
+        padding-top: 18px;
+        padding-bottom: 35px;
+        border: 3px solid #9aa2a9;
+        width: 63px;
+        border-radius: 50%;
+        color: #9aa2a9;
+        font-size: -2px;
+        text-align: center;
+        position: absolute;
+        top: 6px;
+        left: 8px;
+        opacity: 0;
+        -webkit-transition: all 0.4s ease;
+        transition: all 0.4s ease;
+    }
+    .advantage {
+        background: url(../img/bgMain.jpg);
+        padding-bottom: 61px;
+    }
+    .reviews__title {
+        text-align: center;
+        color: #ffffff;
+        font-size: 27px;
+        font-weight: 600;
+        line-height: .75em;
+        padding-bottom: 6px;
+        padding-top: 20px;
+        padding-top: 21px;
+    }
+    .slide1 {
+        height: 300px;
+        width: 100%;
+        display: -webkit-box;
+        display: -ms-flexbox;
+        display: flex;
+        -webkit-box-align: center;
+        -ms-flex-align: center;
+        align-items: center;
+        padding: 5px;
+        -webkit-perspective: 100px;
+        perspective: 100px;
+    }
+    .slider1 {
+        height: 312px;
+        margin: auto;
+        position: relative;
+        width: 100%;
+        display: -ms-grid;
+        display: grid;
+        place-items: center;
+        overflow: hidden;
+        padding-bottom: 20px;
+    }
+    .slide-track1 {
+        display: -webkit-box;
+        display: -ms-flexbox;
+        display: flex;
+        width: 55000px;
+        -webkit-animation: scroll 15s linear infinite;
+        animation: scroll 40s linear infinite;
+    }
+    .tasks__title {
+        text-align: center;
+        color: #32373b;
+        font-size: 27px;
+        font-weight: 600;
+        line-height: .75em;
+        padding-bottom: 1px;
+    }
+    
+    .footer__inner {
+        display: -webkit-box;
+        display: -ms-flexbox;
+        display: flex;
+        flex-wrap: wrap;
+        overflow: hidden;
+        text-align: center;
+    }
+    .footer__inner-item_img-img {
+        max-width: 185px;
+    }
+    .footer__info_text-item {
+        font-size: 15px;
+        color: #fff;
+        line-height: 1.4;
+    }
+    .footer__inner-item {
+        margin: 0 20px;
+    }
+    .footer__copyright {
+        height: 41px;
+        
+        
+    }
+    .down {
+        padding-bottom: 2px;
+        display: none;
+    }
+    .overlay .popup {
+        width: 407px;
+        margin: 0 auto;
+    }
+}
 
 @media (max-width: 415px){
     ul li ul {
@@ -245,6 +621,22 @@
         -webkit-box-pack: justify;
         -ms-flex-pack: justify;
         justify-content: space-evenly;
+    }
+    .advantage__icons_item1 {
+        padding-top: 12px;
+        padding-bottom: 35px;
+        border: 3px solid #9aa2a9;
+        width: 55px;
+        border-radius: 50%;
+        color: #9aa2a9;
+        font-size: -2px;
+        text-align: center;
+        position: absolute;
+        top: 3px;
+        left: 3px;
+        opacity: 0;
+        -webkit-transition: all 0.4s ease;
+        transition: all 0.4s ease;
     }
     .advantage {
         background: url(../img/bgMain.jpg);
