--- a/projectLicensec/projectRulesNorm/src/css/style.css
+++ b/projectLicensec/projectRulesNorm/src/css/style.css
@@ -123,6 +123,12 @@ body {
           align-items: center;
   text-transform: uppercase;
 }
+.header-nav .burger {
+  display: none;
+  position: absolute;
+  right: 25px;
+  top: 10px;
+}
 .header-nav__img {
   position: absolute;
   height: 100px;
@@ -663,6 +669,14 @@ tr:nth-child(2n) {
 }
 
 @media (max-width: 992px) {
+  ul li ul {
+    display: none;
+  }
+
+  #down {
+    display: none;
+  }
+
   .header #navigation {
     position: fixed;
     z-index: 2;
