--- a/projectLicensec/projectStandarts/src/scss/header.scss
+++ b/projectLicensec/projectStandarts/src/scss/header.scss
@@ -106,7 +106,12 @@
       justify-content: space-between;
       align-items: center;  
       text-transform: uppercase;
-      
+      & .burger{
+        display: none;
+        position: absolute;
+        right: 25px;
+        top: 10px;
+    }
       
       &__img{
           position: absolute;
