--- a/projectLicensec/src/css/style.css
+++ b/projectLicensec/src/css/style.css
@@ -33,12 +33,24 @@ body {
   background: url("../../../src/img/bgMainDark.jpg");
 }
 .header_dark {
-  padding-bottom: 110px;
+  padding-bottom: 170px;
 }
 .header #navigation {
   position: fixed;
   z-index: 2;
   width: 1350px;
+}
+.header__contacts {
+  text-align: end;
+  font-family: "Open Sans", sans-serif;
+  font-weight: 500;
+  font-size: 16px;
+  color: #ffffff;
+  padding-top: 15px;
+}
+.header__contacts_item {
+  text-decoration: none;
+  color: #ffffff;
 }
 .header__contacts2 {
   text-align: end;
@@ -50,18 +62,6 @@ body {
   display: none;
 }
 .header__contacts2_item {
-  text-decoration: none;
-  color: #ffffff;
-}
-.header__contacts {
-  text-align: end;
-  font-family: "Open Sans", sans-serif;
-  font-weight: 500;
-  font-size: 16px;
-  color: #ffffff;
-  padding-top: 15px;
-}
-.header__contacts_item {
   text-decoration: none;
   color: #ffffff;
 }
@@ -122,6 +122,12 @@ body {
           align-items: center;
   text-transform: uppercase;
 }
+.header-nav .burger {
+  display: none;
+  position: absolute;
+  right: 25px;
+  top: 10px;
+}
 .header-nav__img {
   position: absolute;
   height: 100px;
@@ -153,6 +159,8 @@ body {
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
   padding-top: 20px;
+  -webkit-transition: all 0.4s ease;
+  transition: all 0.4s ease;
 }
 .header-nav__menu-item {
   font-family: "Open Sans", sans-serif;
@@ -687,6 +695,14 @@ ul li:hover ul li {
 }
 
 @media (max-width: 992px) {
+  ul li ul {
+    display: none;
+  }
+
+  #down {
+    display: none;
+  }
+
   .header #navigation {
     position: fixed;
     z-index: 2;
@@ -814,7 +830,7 @@ ul li:hover ul li {
     font-family: "Open Sans", sans-serif;
     font-weight: 600;
     font-size: 14px;
-    line-height: 46px;
+    line-height: 39px;
     color: #ffffff;
     text-decoration: none;
     margin-left: 0px;
@@ -891,21 +907,40 @@ ul li:hover ul li {
     padding-top: 2px;
   }
 
-  .grid-item {
-    margin: 6px 0;
-    padding: 0 6px;
-    width: 33%;
-    height: 208px;
+  .gallery-grid {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
   }
 
-  .grid-item__tittle {
-    position: absolute;
-    left: 6px;
-    top: 22%;
-    font-size: 18px;
-    color: rgb(255, 255, 255);
-    z-index: 1;
-    opacity: 1;
+  .grid-iteml {
+    overflow: hidden;
+    width: 46%;
+    -ms-grid-column-span: 2;
+    /* grid-column: span 2; */
+    -ms-grid-row-span: 2;
+    grid-row: span 2;
+    position: relative;
+    -webkit-box-shadow: 0px 24px 24px rgba(36, 80, 103, 0.45);
+    box-shadow: 0px 24px 24px rgba(36, 80, 103, 0.45);
+    height: 100%;
+  }
+
+  .grid-item {
+    overflow: hidden;
+    width: 46%;
+    -ms-grid-column-span: 2;
+    /* grid-column: span 2; */
+    -ms-grid-row-span: 2;
+    grid-row: span 2;
+    position: relative;
+    -webkit-box-shadow: 0px 24px 24px rgba(36, 80, 103, 0.45);
+    box-shadow: 0px 24px 24px rgba(36, 80, 103, 0.45);
+    height: 100%;
+    margin: 0px 0;
+    padding: 0 0px;
   }
 
   .grid-item__inner:before {
@@ -921,6 +956,15 @@ ul li:hover ul li {
     -webkit-transition: all 0.4s ease;
     transition: all 0.4s ease;
     opacity: 1;
+  }
+
+  .grid-item__tittle {
+    position: absolute;
+    left: 10px;
+    bottom: 50px;
+    font-size: 24px;
+    color: white;
+    z-index: 1;
   }
 
   .advantage__title {
