--- a/projectProject/projectProject1/src/scss/media.scss
+++ b/projectProject/projectProject1/src/scss/media.scss
@@ -14,6 +14,12 @@
     
 }
 @media (max-width:992px ){
+    ul li ul {
+        display: none;
+    }
+    #down{
+        display: none;
+    }
     .header #navigation {
         position: fixed;
         z-index: 2;
@@ -217,6 +223,34 @@
         -webkit-transition: all 0.4s ease;
         transition: all 0.4s ease;
         opacity: 1;
+    }
+    .grid-item__img {
+        width: 150%;
+        height: 104%;
+        -o-object-fit: cover;
+        object-fit: cover;
+        -webkit-transition: all 0.4s ease;
+        transition: all 0.4s ease;
+    }
+    .home__text {
+        text-align: center;
+        color: #1E1E20;
+        font-size: 27px;
+        font-weight: 600;
+        line-height: 0.75em;
+        padding-bottom: 10px;
+        padding-top: 2px;
+    }
+    .gallery-grid {
+        display: flex;
+        flex-wrap: wrap;
+        grid-gap: 0px 0px;
+    }
+    .grid-item {
+        margin: 2px 0;
+        padding: 0px 2px;
+        width: 50%;
+        height: 210px;
     }
     .advantage__title {
         text-align: center;
