--- a/projectProject/src/css/style.css
+++ b/projectProject/src/css/style.css
@@ -122,6 +122,12 @@ body {
           align-items: center;
   text-transform: uppercase;
 }
+.header-nav .burger {
+  display: none;
+  position: absolute;
+  right: 25px;
+  top: 10px;
+}
 .header-nav__img {
   position: absolute;
   height: 100px;
@@ -751,6 +757,14 @@ ul li:hover ul li {
 }
 
 @media (max-width: 992px) {
+  ul li ul {
+    display: none;
+  }
+
+  #down {
+    display: none;
+  }
+
   .header #navigation {
     position: fixed;
     z-index: 2;
@@ -878,7 +892,7 @@ ul li:hover ul li {
     font-family: "Open Sans", sans-serif;
     font-weight: 600;
     font-size: 14px;
-    line-height: 46px;
+    line-height: 39px;
     color: #ffffff;
     text-decoration: none;
     margin-left: 0px;
@@ -975,6 +989,41 @@ ul li:hover ul li {
     -webkit-transition: all 0.4s ease;
     transition: all 0.4s ease;
     opacity: 1;
+  }
+
+  .grid-item__img {
+    width: 150%;
+    height: 104%;
+    -o-object-fit: cover;
+    object-fit: cover;
+    -webkit-transition: all 0.4s ease;
+    transition: all 0.4s ease;
+  }
+
+  .home__text {
+    text-align: center;
+    color: #1E1E20;
+    font-size: 27px;
+    font-weight: 600;
+    line-height: 0.75em;
+    padding-bottom: 10px;
+    padding-top: 2px;
+  }
+
+  .gallery-grid {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    grid-gap: 0px 0px;
+  }
+
+  .grid-item {
+    margin: 2px 0;
+    padding: 0px 2px;
+    width: 50%;
+    height: 210px;
   }
 
   .advantage__title {
@@ -1279,7 +1328,7 @@ ul li:hover ul li {
     font-family: "Open Sans", sans-serif;
     font-weight: 600;
     font-size: 14px;
-    line-height: 46px;
+    line-height: 39px;
     color: #ffffff;
     text-decoration: none;
     margin-left: 0px;
