--- a/projectReviews — копия/src/css/style.css
+++ b/projectReviews — копия/src/css/style.css
@@ -33,12 +33,24 @@ body {
   background: url("../../../src/img/bgMainDark.jpg");
 }
 .header_dark {
-  padding-bottom: 110px;
+  padding-bottom: 170px;
 }
 .header #navigation {
   position: fixed;
   z-index: 2;
   width: 1350px;
+}
+.header__contacts {
+  text-align: end;
+  font-family: "Open Sans", sans-serif;
+  font-weight: 500;
+  font-size: 16px;
+  color: #ffffff;
+  padding-top: 15px;
+}
+.header__contacts_item {
+  text-decoration: none;
+  color: #ffffff;
 }
 .header__contacts2 {
   text-align: end;
@@ -50,18 +62,6 @@ body {
   display: none;
 }
 .header__contacts2_item {
-  text-decoration: none;
-  color: #ffffff;
-}
-.header__contacts {
-  text-align: end;
-  font-family: "Open Sans", sans-serif;
-  font-weight: 500;
-  font-size: 16px;
-  color: #ffffff;
-  padding-top: 15px;
-}
-.header__contacts_item {
   text-decoration: none;
   color: #ffffff;
 }
@@ -122,6 +122,12 @@ body {
           align-items: center;
   text-transform: uppercase;
 }
+.header-nav .burger {
+  display: none;
+  position: absolute;
+  right: 25px;
+  top: 10px;
+}
 .header-nav__img {
   position: absolute;
   height: 100px;
@@ -153,6 +159,8 @@ body {
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
   padding-top: 20px;
+  -webkit-transition: all 0.4s ease;
+  transition: all 0.4s ease;
 }
 .header-nav__menu-item {
   font-family: "Open Sans", sans-serif;
@@ -531,10 +539,22 @@ ul li:hover ul li {
 }
 
 @media (max-width: 992px) {
+  ul li ul {
+    display: none;
+  }
+
+  #down {
+    display: none;
+  }
+
   .header #navigation {
     position: fixed;
     z-index: 2;
     width: 500px;
+  }
+
+  .home {
+    padding: 20px;
   }
 
   .header .burger {
@@ -731,8 +751,8 @@ ul li:hover ul li {
     font-size: 27px;
     font-weight: 600;
     line-height: 0.75em;
-    padding-bottom: 2px;
-    padding-top: 2px;
+    padding-bottom: 24px;
+    padding-top: 0px;
   }
 
   .grid-item {
@@ -853,7 +873,7 @@ ul li:hover ul li {
   .tasks__title {
     text-align: center;
     color: #32373b;
-    font-size: 27px;
+    font-size: 19px;
     font-weight: 600;
     line-height: 0.75em;
     padding-bottom: 1px;
