--- a/projectServis/projectServis1/src/css/style.css
+++ b/projectServis/projectServis1/src/css/style.css
@@ -33,7 +33,7 @@ body {
   background: url("../../../src/img/bgMainDark.jpg");
 }
 .header_dark {
-  padding-bottom: 110px;
+  padding-bottom: 170px;
 }
 .header #navigation {
   position: fixed;
@@ -121,6 +121,12 @@ body {
       -ms-flex-align: center;
           align-items: center;
   text-transform: uppercase;
+}
+.header-nav .burger {
+  display: none;
+  position: absolute;
+  right: 25px;
+  top: 10px;
 }
 .header-nav__img {
   position: absolute;
@@ -674,12 +680,34 @@ span {
 
   .home__text {
     text-align: center;
-    color: #1E1E20;
+    color: #c4c4cb;
     font-size: 27px;
     font-weight: 600;
     line-height: 0.75em;
-    padding-bottom: 2px;
+    padding-bottom: 25px;
     padding-top: 2px;
+  }
+
+  #down {
+    display: none;
+  }
+
+  .header-nav__menu-item {
+    font-family: "Open Sans", sans-serif;
+    font-weight: 600;
+    font-size: 14px;
+    line-height: 39px;
+    color: #ffffff;
+    text-decoration: none;
+    margin-left: 0px;
+  }
+
+  span {
+    margin-left: 0px;
+  }
+
+  ul li ul {
+    display: none;
   }
 
   .grid-item {
