--- a/projectServis/projectServis1/src/scss/header.scss
+++ b/projectServis/projectServis1/src/scss/header.scss
@@ -15,7 +15,7 @@
     
     &_dark{
         
-        padding-bottom: 110px;
+        padding-bottom: 170px;
         
     }
     #navigation{
@@ -107,6 +107,12 @@
         align-items: center;  
         text-transform: uppercase;
         
+        & .burger{
+            display: none;
+            position: absolute;
+            right: 25px;
+            top: 10px;
+        }
         
         &__img{
             position: absolute;
