--- a/projectServis/projectServis9/src/scss/media.scss
+++ b/projectServis/projectServis9/src/scss/media.scss
@@ -190,12 +190,30 @@
     }
     .home__text {
         text-align: center;
-        color: #1E1E20;
+        color: #c4c4cb;
         font-size: 27px;
         font-weight: 600;
-        line-height: .75em;
-        padding-bottom: 2px;
+        line-height: 1.3em;
+        padding-bottom: 25px;
         padding-top: 2px;
+    }
+    #down{
+        display: none;
+    }
+    .header-nav__menu-item {
+        font-family: "Open Sans", sans-serif;
+        font-weight: 600;
+        font-size: 14px;
+        line-height: 39px;
+        color: #ffffff;
+        text-decoration: none;
+        margin-left: 0px;
+    }
+    span {
+        margin-left: 0px;
+    }
+    ul li ul {
+        display: none;
     }
     .grid-item {
         margin: 6px 0;
