--- a/projectServis/src/css/style.css
+++ b/projectServis/src/css/style.css
@@ -30,15 +30,27 @@ body {
 }
 
 .header {
-  background: url("../../src/img/bgMainDark.jpg");
+  background: url("../../../src/img/bgMainDark.jpg");
 }
 .header_dark {
-  padding-bottom: 110px;
+  padding-bottom: 170px;
 }
 .header #navigation {
   position: fixed;
   z-index: 2;
   width: 1350px;
+}
+.header__contacts {
+  text-align: end;
+  font-family: "Open Sans", sans-serif;
+  font-weight: 500;
+  font-size: 16px;
+  color: #ffffff;
+  padding-top: 15px;
+}
+.header__contacts_item {
+  text-decoration: none;
+  color: #ffffff;
 }
 .header__contacts2 {
   text-align: end;
@@ -50,18 +62,6 @@ body {
   display: none;
 }
 .header__contacts2_item {
-  text-decoration: none;
-  color: #ffffff;
-}
-.header__contacts {
-  text-align: end;
-  font-family: "Open Sans", sans-serif;
-  font-weight: 500;
-  font-size: 16px;
-  color: #ffffff;
-  padding-top: 15px;
-}
-.header__contacts_item {
   text-decoration: none;
   color: #ffffff;
 }
@@ -122,6 +122,12 @@ body {
           align-items: center;
   text-transform: uppercase;
 }
+.header-nav .burger {
+  display: none;
+  position: absolute;
+  right: 25px;
+  top: 10px;
+}
 .header-nav__img {
   position: absolute;
   height: 100px;
@@ -153,6 +159,8 @@ body {
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
   padding-top: 20px;
+  -webkit-transition: all 0.4s ease;
+  transition: all 0.4s ease;
 }
 .header-nav__menu-item {
   font-family: "Open Sans", sans-serif;
@@ -808,6 +816,14 @@ ul li:hover ul li {
 }
 
 @media (max-width: 992px) {
+  ul li ul {
+    display: none;
+  }
+
+  #down {
+    display: none;
+  }
+
   .header #navigation {
     position: fixed;
     z-index: 2;
@@ -935,7 +951,7 @@ ul li:hover ul li {
     font-family: "Open Sans", sans-serif;
     font-weight: 600;
     font-size: 14px;
-    line-height: 46px;
+    line-height: 39px;
     color: #ffffff;
     text-decoration: none;
     margin-left: 0px;
@@ -1021,12 +1037,27 @@ ul li:hover ul li {
 
   .grid-item__tittle {
     position: absolute;
-    left: 6px;
-    top: 22%;
-    font-size: 18px;
+    left: 0px;
+    top: 3%;
+    text-align: center;
+    display: block;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    margin: 0px 35px;
+    font-size: 19px;
     color: rgb(255, 255, 255);
     z-index: 1;
     opacity: 1;
+  }
+
+  .grid-item__img {
+    width: 129%;
+    height: 100%;
+    -o-object-fit: cover;
+    object-fit: cover;
+    -webkit-transition: all 0.4s ease;
+    transition: all 0.4s ease;
   }
 
   .grid-item__inner:before {
