--- a/src/css/style.css
+++ b/src/css/style.css
@@ -25,12 +25,14 @@ body {
   height: 120px;
   position: fixed;
   width: 100%;
-  background: url("../../src/img/bgMainDark.jpg");
+  background-color: rgba(0, 19, 34, 0.63);
   z-index: 2;
 }
 
 .header {
-  background: url("../../src/img/bgMainDark.jpg");
+  /* background: url("../../src/img/bgMainDark.jpg"); */
+  background-color: rgba(0, 19, 34, 0.63);
+  height: 1200px;
 }
 .header_dark {
   padding-bottom: 170px;
@@ -66,11 +68,11 @@ body {
   color: #ffffff;
 }
 .header__info {
-  padding-top: 60px;
+  padding-top: 360px;
   text-align: center;
 }
 .header__info-title {
-  color: #FFF;
+  color: #fff;
   font-family: "Roboto Condensed", Sans-serif;
   font-size: 76px;
   font-weight: 600;
@@ -78,7 +80,7 @@ body {
   padding-top: 50px;
 }
 .header__info-subtitle {
-  color: #BFBFBF;
+  color: #bfbfbf;
   font-family: "Roboto Condensed", Sans-serif;
   font-size: 25px;
   font-weight: 600;
@@ -235,6 +237,24 @@ ul li:hover ul li {
 
 .down {
   padding-bottom: 2px;
+}
+
+#videoBackground {
+  position: fixed;
+  right: -5%;
+  bottom: 0;
+  margin: 0 auto;
+  min-width: 110%;
+  z-index: -2;
+}
+
+.main {
+  background-color: rgb(46, 65, 96);
+}
+
+.home__text,
+.tasks__title {
+  color: white;
 }
 
 .home {
